--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,6 +19,6 @@ jobs:
     - name: Check
       run:  ls day* -d | xargs -I {} bash -c "cd '{}' && cargo clippy -- -W clippy::pedantic"
     - name: Build
-      run:  ls day* -d | xargs -I {} bash -c "cd '{}' && cargo run"
+      run:  ls day* -d | xargs -I {} bash -c "cd '{}' && cargo run --release"
     - name: Run tests
       run: ls day* -d | xargs -I {} bash -c "cd '{}' && cargo test"
