--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,8 +17,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Check
-      run:  ls day* -d | xargs -I {} bash -c "cd '{}' && cargo clippy -- -W clippy::pedantic"
+      run:  make check
     - name: Build
-      run:  ls day* -d | xargs -I {} bash -c "cd '{}' && cargo run --release"
+      run:  make run
     - name: Run tests
-      run: ls day* -d | xargs -I {} bash -c "cd '{}' && cargo test"
+      run:  make test
